--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
               <manifest>
                 <addClasspath>true</addClasspath>
                  <classpathPrefix>lib/</classpathPrefix>
-                  <mainClass>com.mypackage.MyClass</mainClass>
+                  <mainClass>java.Projects.App</mainClass>
               </manifest>
             </archive>
          </configuration>
